appId: com.example.flutter_starter   # TODO: replace with your android app id
name: Auth - Login invalid password
tags:
  - auth
  - negative
---
- launchApp:
    clearState: true
- tapOn:
    id: "login_email"
- inputText: ${APP_USER}
- tapOn:
    id: "login_password"
- inputText: "wrong-password"
# - hideKeyboard
- tapOn:
    id: "login_submit"
- assertVisible: "email or password is invalid"
