appId: com.example.flutter_starter   # TODO: replace with your ios app id
name: Auth - Login invalid password
tags:
  - auth
  - negative
---
- launchApp:
    clearState: true
- tapOn:
    id: "username_input"
- inputText: ${APP_USER}
- tapOn:
    id: "password_input"
- inputText: "wrong-password"
- hideKeyboard
- tapOn:
    id: "login_button"
- assertVisible: "Invalid credentials"
